# moodlog

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
moodlog/: __init__.py  __main__.py  config.py  config.toml.example  database.py  main.py  models.py
moodlog/commands/: __init__.py  delete.py  export.py  record.py  remind.py  report.py  stats.py  view.py
moodlog/locale/: en_US.json  zh_CN.json
moodlog/tests/: __init__.py  test_database.py  test_record.py  test_stats.py
moodlog/utils/: __init__.py  art.py  chart.py  display.py  i18n.py  notify.py  report.py
